--- a/styles/index.css
+++ b/styles/index.css
@@ -55,32 +55,61 @@
   font-weight: 300;
 }
 
-* {
-  margin: 0;
-  padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+.generic__block, .main .block__top-left, .main .block__top-middle, .main .block__end, .main .block__bottom-left, .main .block__bottom-right {
+  padding: 0.5em 2em 2em 2em;
 }
 
-html,
-body {
-  font-size: 13px;
-  background: #ecf2f8;
-}
-
-body {
-  font-family: "Barlow Semi Condensed", sans-serif;
-  min-height: 100vh;
-  width: 100%;
+.generic__img, .main .block__top-left--user, .main .block__top-middle--user, .main .block__end--user, .main .block__bottom-left--user, .main .block__bottom-right--user {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  margin-top: 1em;
+}
+
+.generic__img img, .main .block__top-left--user img, .main .block__top-middle--user img, .main .block__end--user img, .main .block__bottom-left--user img, .main .block__bottom-right--user img {
+  border-radius: 50%;
+  border: 3px solid rgba(255, 255, 255, 0.5);
+  width: 30px;
+  height: 30px;
+}
+
+.generic__usertext, .main .block__top-left--user-text, .main .block__top-middle--user-text, .main .block__end--user-text, .main .block__bottom-left--user-text, .main .block__bottom-right--user-text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-left: 1em;
+}
+
+.generic__usertext h6, .main .block__top-left--user-text h6, .main .block__top-middle--user-text h6, .main .block__end--user-text h6, .main .block__bottom-left--user-text h6, .main .block__bottom-right--user-text h6 {
+  color: white;
+  font-size: 0.9rem;
+}
+
+.generic__usertext p, .main .block__top-left--user-text p, .main .block__top-middle--user-text p, .main .block__end--user-text p, .main .block__bottom-left--user-text p, .main .block__bottom-right--user-text p {
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 0.7rem;
+}
+
+.generic__quote, .main .block__top-left--quote, .main .block__top-middle--quote, .main .block__end--quote, .main .block__bottom-left--quote, .main .block__bottom-right--quote {
+  margin: 1em 0;
+}
+
+.generic__quote h5, .main .block__top-left--quote h5, .main .block__top-middle--quote h5, .main .block__end--quote h5, .main .block__bottom-left--quote h5, .main .block__bottom-right--quote h5 {
+  font-size: 1.4rem;
+  color: white;
+}
+
+.generic__conclusion h5, .main .block__top-left--conclusion h5, .main .block__top-middle--conclusion h5, .main .block__end--conclusion h5, .main .block__bottom-left--conclusion h5, .main .block__bottom-right--conclusion h5 {
+  font-size: 0.95rem;
+  color: rgba(255, 255, 255, 0.5);
+  font-weight: 300;
 }
 
 .main {
@@ -194,5 +223,124 @@ body {
 
 .main .block__bottom-right--user img {
   border: 3px solid rgba(255, 255, 255, 0.5);
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+html,
+body {
+  font-size: 15px;
+  background: #ecf2f8;
+}
+
+body {
+  font-family: "Barlow Semi Condensed", sans-serif;
+  height: 100vh;
+  width: 80%;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+@media only screen and (max-width: 1050px) {
+  body {
+    display: block;
+  }
+  .main {
+    padding: 5em 0;
+    -ms-grid-rows: 25% 45% auto;
+    -ms-grid-columns: (1fr)[4];
+        grid-template: 25% 45% auto/repeat(4, 1fr);
+  }
+  .main .block__top-middle, .main .block__bottom-right {
+    -ms-grid-column: 3;
+    -ms-grid-column-span: 2;
+    grid-column: 3 / 5;
+  }
+  .main .block__bottom-left {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1 / 2;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-column: 1 / 3;
+  }
+  .main .block__top-left {
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2 / 3;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-column: 1 / 3;
+  }
+  .main .block__end {
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 1;
+    grid-row: 3 / 4;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 4;
+    grid-column: 1 / 5;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .main {
+    padding: 5em 0;
+    -ms-grid-rows: (auto)[5];
+    -ms-grid-columns: 1fr;
+        grid-template: repeat(5, auto)/1fr;
+  }
+  .main .block__top-left {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1 / 2;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1 / 2;
+  }
+  .main .block__top-middle {
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2 / 3;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1 / 2;
+  }
+  .main .block__bottom-left {
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 1;
+    grid-row: 3 / 4;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1 / 2;
+  }
+  .main .block__bottom-right {
+    -ms-grid-row: 4;
+    -ms-grid-row-span: 1;
+    grid-row: 4 / 5;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1 / 2;
+  }
+  .main .block__end {
+    -ms-grid-row: 5;
+    -ms-grid-row-span: 1;
+    grid-row: 5 / 6;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1 / 2;
+  }
 }
 /*# sourceMappingURL=index.css.map */
