--- a/styles/partials/_variables.scss
+++ b/styles/partials/_variables.scss
@@ -8,3 +8,6 @@ $lightgrayish-blue: hsl(217, 19%, 35%);
 $darkish-text: hsl(210, 46%, 95%);
 $verydarkish-blue: hsl(219, 29%, 14%);
 $box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+
+$media-query-lg: 1050px;
+$media-query-md: 768px;
